--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.51"
     },
     "require-dev": {
